--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Site Title"
+title                    : "계속 수정 중"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Somin Park"
@@ -219,7 +219,7 @@ permalink: /:categories/:title/
 paginate: 5 # amount of posts to show
 paginate_path: /page:num/
 timezone: #"https://www.naver.com/" # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
-
+future: true
 
 # Plugins (previously gems:)
 plugins:
