--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,11 +1,11 @@
 # main links
 main:
   - title: "논문 리뷰"
-    url: https://parksomin23.github.io/categories/논문 리뷰/ #https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
+    url: https://parksomin23.github.io/categories/논문-리뷰/ #https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
   - title: "코딩 테스트"
-    children: https://parksomin23.github.io/categories/코딩 테스트/
+    children:
       - title: "삼성 아카데미"
-        url: https://parksomin23.github.io/categories/코딩 테스트/삼성 아카데미
+        url: https://parksomin23.github.io/categories/코딩-테스트/삼성-아카데미
   - title: "메모"
     url: https://parksomin23.github.io/categories/메모/
   # - title: "About"
