--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,17 +2,11 @@
 main:
   - title: "논문 리뷰"
     url: https://parksomin23.github.io/categories/논문-리뷰/ #https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
+  
   - title: "코딩 테스트"
     children:
       - title: "삼성 아카데미"
-        url: https://parksomin23.github.io/categories/코딩-테스트/삼성-아카데미
+        url: #https://parksomin23.github.io/categories/코딩-테스트/삼성-아카데미
+  
   - title: "메모"
-    url: https://parksomin23.github.io/categories/메모/
-  # - title: "About"
-  #   url: https://mmistakes.github.io/minimal-mistakes/about/
-  # - title: "Sample Posts"
-  #   url: /year-archive/
-  # - title: "Sample Collections"
-  #   url: /collection-archive/
-  # - title: "Sitemap"
-  #   url: /sitemap/
+    url: #https://parksomin23.github.io/categories/메모/
