--- a/_config.yml
+++ b/_config.yml
@@ -202,7 +202,7 @@ sass:
 
 # Outputting
 permalink: /:categories/:title/
-paginate: 5 # amount of posts to show
+paginate: 10 # amount of posts to show
 paginate_path: /page:num/
 timezone: #"https://www.naver.com/" # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 future: true
@@ -270,7 +270,7 @@ defaults:
     values:
       layout: single
       author_profile: true
-      read_time: true
+      read_time: false
       comments: # true
       share: true
       related: true
