--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,5 +11,5 @@ main:
   - title: "메모"
     url: #https://parksomin23.github.io/categories/메모/
 
-  - title: "Tags"
+  - title: "태그"
     url: https://parksomin23.github.io/tags/
