--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,7 +9,7 @@ main:
         url: #https://parksomin23.github.io/categories/코딩-테스트/삼성-아카데미
   
   - title: "메모"
-    url: #https://parksomin23.github.io/categories/메모/
+    url: https://parksomin23.github.io/categories/메모/
 
   - title: "태그"
     url: https://parksomin23.github.io/tags/
