--- a/_config.yml
+++ b/_config.yml
@@ -104,7 +104,7 @@ analytics:
 author:
   name             : "Somin Park"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "오디오 관련 AI 공부 중인 석사 과정의 개인적인 정리 노트"
+  bio              : "오디오 관련 AI 석사 수료생의 개인적인 정리 노트"
   location         : "Republic of Korea"
   email            :
   links:
