--- a/.github/workflows/build-jekyll.yml
+++ b/.github/workflows/build-jekyll.yml
@@ -1,65 +1,35 @@
-name: Build and Deploy to Github Pages
-
-on:
-  push:
-    branches:
-      - master  # Here source code branch is `master`, it could be other branch
-
-env:
-  CACHED_DEPENDENCY_PATHS: ${{ github.workspace }}/node_modules
-  CACHED_BUILD_PATHS: ${{ github.workspace }}/.next
-  BUILD_CACHE_KEY: ${{ github.sha }}
-
+name: Caching with npm
+on: push
 jobs:
-  job_install_dependencies:
-    name: Install Dependencies
-    runs-on: macos-latest
-    timeout-minutes: 15
+  build:
+    runs-on: ubuntu-latest
     steps:
-      - name: Check out current commit (${{ github.sha }})
-        uses: actions/checkout@v2
-      - name: Set up Node
-        uses: actions/setup-node@v1
-      - name: Compute dependency cache key
-        id: compute_lockfile_hash
-        run: echo "::set-output name=hash::${{ hashFiles('package-lock.json') }}"
-      - name: Check dependency cache
-        uses: actions/cache@v2
-        id: cache_dependencies
-        with:
-          path: ${{ env.CACHED_DEPENDENCY_PATHS }}
-          key: ${{ steps.compute_lockfile_hash.outputs.hash }}
-      - name: Install dependencies
-        # use '.', not '[]' with hyphenated variables
-        # https://github.com/nektos/act/issues/104#issuecomment-592892249
-        if: steps.cache_dependencies.outputs.cache-hit == ''
-        run: npm install
-    outputs:
-      dependency_cache_key: ${{ steps.compute_lockfile_hash.outputs.hash }}
+      - uses: actions/checkout@v4
 
-  job_build:
-    name: Build
-    needs: job_install_dependencies
-    runs-on: macos-latest
-    timeout-minutes: 15
-    steps:
-      - name: Check out current commit (${{ github.sha }})
-        uses: actions/checkout@v2
-      - name: Set up Node
-        uses: actions/setup-node@v1
-      - name: Check dependency cache
-        uses: actions/cache@v2
+      - name: Cache node modules
+        id: cache-npm
+        uses: actions/cache@v3
+        env:
+          cache-name: cache-node-modules
         with:
-          path: ${{ env.CACHED_DEPENDENCY_PATHS }}
-          key: ${{ needs.job_install_dependencies.outputs.dependency_cache_key }}
-      - name: Check build cache
-        uses: actions/cache@v2
-        id: cache_built_packages
-        with:
-          path: ${{ env.CACHED_BUILD_PATHS }}
-          key: ${{ env.BUILD_CACHE_KEY }}
-      - name: Build packages
-        if: steps.cache_built_packages.outputs.cache-hit == ''
+          # npm cache files are stored in `~/.npm` on Linux/macOS
+          path: ~/.npm
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-build-${{ env.cache-name }}-
+            ${{ runner.os }}-build-
+            ${{ runner.os }}-
+
+      - if: ${{ steps.cache-npm.outputs.cache-hit != 'true' }}
+        name: List the state of node modules
+        continue-on-error: true
+        run: npm list
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Build
         run: npm run build
-    outputs:
-      dependency_cache_key: ${{ needs.job_install_dependencies.outputs.dependency_cache_key }}
+
+      - name: Test
+        run: npm test
