--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,10 +3,10 @@ main:
   - title: "논문 리뷰"
     url: https://parksomin23.github.io/categories/논문-리뷰/ #https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
   
-  - title: "코딩 테스트"
-    children:
-      - title: "삼성 아카데미"
-        url: #https://parksomin23.github.io/categories/코딩-테스트/삼성-아카데미
+  #- title: "코딩 테스트"
+  #  children:
+  #    - title: "삼성 아카데미"
+  #      url: #https://parksomin23.github.io/categories/코딩-테스트/삼성-아카데미
   
   - title: "정리함"
     url: https://parksomin23.github.io/categories/정리함/
