--- a/_config.yml
+++ b/_config.yml
@@ -104,7 +104,7 @@ analytics:
 author:
   name             : "Somin Park"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "Machine Learning 석사 수료/졸업예정의 개인적인 정리 노트. 틀린 부분이 있으면 아래 이메일로 연락주세요"
+  bio              : "Machine Learning 개인적인 정리 노트. 틀린 부분이 있을 수 있습니다. 발견 시 언제든지 아래 이메일로 연락주시면 감사하겠습니다."
   location         : "Republic of Korea"
   email            : "caqta0323@naver.com"
   links:
