--- a/_config.yml
+++ b/_config.yml
@@ -104,7 +104,7 @@ analytics:
 author:
   name             : "Somin Park"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "Machine Learning 개인적인 정리 노트. 틀린 부분 발견 시 아래 이메일로 연락주시면 감사하겠습니다."
+  bio              : "Machine Learning/AI 개인적인 정리 노트입니다. 잘못 정리된 부분이 있을 수 있습니다. 해당 문제 발견 시 아래 이메일로 연락주시면 반영하도록 하겠습니다!"
   location         : "Republic of Korea"
   email            : "caqta0323@naver.com"
   links:
